adding dashboard layout

--- a/src/app/dash/dash.component.less
+++ b/src/app/dash/dash.component.less
@@ -19,3 +19,11 @@
 .dashboard-card-content {
   text-align: center;
 }
+
+app-line-chart, app-bar-chart, app-radar-chart, app-pie-chart {
+  flex-grow: 1;
+}
+
+app-table{
+  height: 700px !important;
+}
