--- a/src/styles.less
+++ b/src/styles.less
@@ -13,3 +13,28 @@ a { cursor: pointer; }
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.chartContainer canvas {
+  max-height: 250px;
+  width: auto;
+}
+
+.chartContainer{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.chart-cnt canvas {
+  max-height: 250px;
+  width: auto !important;
+}
+
+.chart-cnt{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
