--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
 
 <!-- main app container -->
 <div class="app-container" [ngClass]="{ 'bg-light': user }">
-  <app-nav></app-nav>
+
+  <app-nav *ngIf="user"></app-nav>
     <alert></alert>
     <router-outlet></router-outlet>
 </div>
