--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-﻿<div class="p-4">
+﻿
+<div class="p-4">
     <div class="container">
         <h1>Hi {{user.firstName}}!</h1>
         <p><a routerLink="/users">Manage Users</a></p>
