--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -97,7 +97,7 @@
 
           <div>
             <button mat-button matStepperPrevious>Back</button>
-            <!-- <button mat-button (click)="stepper.onreset()et()">Reset</button> -->
+             <button mat-button (click)="stepper.reset()">Reset</button>
             <button mat-button (click)="onSubmit()">Submit</button>
           </div>
         </mat-step>
