--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -5,32 +5,22 @@
         <mat-step [stepControl]="userForm">
           <form [formGroup]="userForm">
             <ng-template matStepLabel>Personal Details</ng-template>
-            <mat-form-field>
-              <mat-label>First Name</mat-label>
-              <input matInput placeholder="First Name" formControlName="firstName" required>
-            </mat-form-field>
-            <br/>
-            <mat-form-field>
-              <mat-label>Last name</mat-label>
-              <textarea matInput placeholder="Last Name" formControlName="lastName" required>
-        </textarea>
-            </mat-form-field>
-            <br/>
-            <mat-form-field>
-              <mat-label>User Name</mat-label>
-              <input matInput placeholder="User Name" formControlName="username" required>
-            </mat-form-field>
-            <br/>
-            <mat-form-field>
-              <mat-label>Id Number</mat-label>
-              <input matInput placeholder="Id Number" formControlName="idNumber" required>
-            </mat-form-field>
-            <br/>
-            <mat-form-field>
-              <mat-label>Password</mat-label>
-              <input matInput placeholder="Password" formControlName="password" required>
-            </mat-form-field>
-            <br/>
+            <div class="form-group">
+              <input matInput placeholder="First Name" formControlName="firstName" />
+            </div>
+            <div class="form-group">
+              <input matInput placeholder="Last Name" formControlName="lastName" required />
+            </div>
+            <div class="form-group">
+              <input matInput placeholder="User Name" formControlName="username" required />
+          </div>
+            <div class="form-group">
+              <input matInput placeholder="Id Number" formControlName="idNumber" required />
+            </div>
+
+            <div class="form-group">
+              <input matInput placeholder="Password" formControlName="password" required />
+            </div>
             <div>
               <button mat-button matStepperNext>Next</button>
             </div>
@@ -39,16 +29,12 @@
         <mat-step [stepControl]="companyForm">
           <form [formGroup]="companyForm">
             <ng-template matStepLabel>Company Details</ng-template>
-            <mat-form-field>
-              <mat-label>Company Name</mat-label>
-              <input matInput placeholder="Company Name" formControlName="companyName" required>
-            </mat-form-field>
-            <br/>
-            <mat-form-field>
-              <mat-label>VAT Number</mat-label>
-              <input matInput placeholder="VAT Number" formControlName="vatNumbers" required>
-            </mat-form-field>
-            <br/>
+            <div class="form-group">
+              <input matInput placeholder="Company Name" formControlName="companyName" required />
+            </div>
+            <div class="form-group">
+              <input matInput placeholder="VAT Number" formControlName="vatNumber" required />
+            </div>
             <div>
               <button mat-button matStepperPrevious>Back</button>
               <button mat-button matStepperNext>Next</button>
@@ -58,26 +44,18 @@
         <mat-step [stepControl]="addressForm">
           <form [formGroup]="addressForm">
             <ng-template matStepLabel>Address Details</ng-template>
-            <mat-form-field>
-              <mat-label>Street Number</mat-label>
-              <input matInput placeholder="Street Number" formControlName="streetNumber" required>
-            </mat-form-field>
-            <br/>
-            <mat-form-field>
-              <mat-label>Suburb</mat-label>
-              <input matInput placeholder="Suburb" formControlName="suburb" required>
-            </mat-form-field>
-            <br/>
-            <mat-form-field>
-              <mat-label>Region</mat-label>
-              <input matInput placeholder="Region" formControlName="region" required>
-            </mat-form-field>
-            <br/>
-            <mat-form-field>
-              <mat-label>PO Box</mat-label>
-              <input matInput placeholder="PO Box" formControlName="poBox" required>
-            </mat-form-field>
-            <br/>
+            <div class="form-group">
+              <input matInput placeholder="Street Number" formControlName="streetNumber" required />
+            </div>
+            <div class="form-group">
+              <input matInput placeholder="Suburb" formControlName="suburb" required />
+            </div>
+            <div class="form-group">
+              <input matInput placeholder="Region" formControlName="region" required />
+            </div>
+            <div class="form-group">
+              <input matInput placeholder="PO Box" formControlName="poBox" required />
+            </div>
             <div>
               <button mat-button matStepperPrevious>Back</button>
               <button mat-button matStepperNext>Next</button>
