--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -62,6 +62,27 @@
             </div>
           </form>
         </mat-step>
+        <mat-step [stepControl]="addressForm">
+          <form [formGroup]="addressForm">
+            <ng-template matStepLabel>Address Details</ng-template>
+            <div class="form-group">
+              <input matInput placeholder="Street Number" formControlName="streetNumber" required />
+            </div>
+            <div class="form-group">
+              <input matInput placeholder="Suburb" formControlName="suburb" required />
+            </div>
+            <div class="form-group">
+              <input matInput placeholder="Region" formControlName="region" required />
+            </div>
+            <div class="form-group">
+              <input matInput placeholder="PO Box" formControlName="poBox" required />
+            </div>
+            <div>
+              <button mat-button matStepperPrevious>Back</button>
+              <button mat-button matStepperNext>Next</button>
+            </div>
+          </form>
+        </mat-step>
         <mat-step>
           <ng-template matStepLabel>Done</ng-template>
           <p>You are now done.</p>
