Updated Styling for login and registration

--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -1,24 +1,24 @@
-﻿<div class="card">
-    <h4 class="card-header">Register</h4>
+﻿<div class="card login-reg-form" style="margin-top:50px;">
+    <h4 class="card-header">Create an Account</h4>
     <div class="card-body">
       <mat-horizontal-stepper [linear]="isLinear" #stepper>
         <mat-step [stepControl]="userForm">
           <form [formGroup]="userForm">
             <ng-template matStepLabel>Personal Details</ng-template>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="First Name" formControlName="firstName" />
             </div>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="Last Name" formControlName="lastName" required />
             </div>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="User Name" formControlName="username" required />
           </div>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="Id Number" formControlName="idNumber" required />
             </div>
 
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="Password" formControlName="password" required />
             </div>
             <div>
@@ -29,10 +29,10 @@
         <mat-step [stepControl]="companyForm">
           <form [formGroup]="companyForm">
             <ng-template matStepLabel>Company Details</ng-template>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="Company Name" formControlName="companyName" required />
             </div>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="VAT Number" formControlName="vatNumber" required />
             </div>
             <div>
@@ -44,16 +44,16 @@
         <mat-step [stepControl]="addressForm">
           <form [formGroup]="addressForm">
             <ng-template matStepLabel>Address Details</ng-template>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="Street Number" formControlName="streetNumber" required />
             </div>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="Suburb" formControlName="suburb" required />
             </div>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="Region" formControlName="region" required />
             </div>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="PO Box" formControlName="poBox" required />
             </div>
             <div>
@@ -65,16 +65,16 @@
         <mat-step [stepControl]="addressForm">
           <form [formGroup]="addressForm">
             <ng-template matStepLabel>Address Details</ng-template>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="Street Number" formControlName="streetNumber" required />
             </div>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="Suburb" formControlName="suburb" required />
             </div>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="Region" formControlName="region" required />
             </div>
-            <div class="form-group">
+            <div class="form-group form-item-reg">
               <input matInput placeholder="PO Box" formControlName="poBox" required />
             </div>
             <div>
@@ -85,7 +85,7 @@
         </mat-step>
         <mat-step>
           <ng-template matStepLabel>Done</ng-template>
-          <p>You are now done.</p>
+          <p>Thank you for creating an account with the Namibian Tenant Database. Please login to continue.</p>
 
          <!-- <mat-list>
             <mat-list-item> <strong>Name:</strong> {{ this.firstFormGroup.value.name }}</mat-list-item>
@@ -96,8 +96,8 @@
 
           <div>
             <button mat-button matStepperPrevious>Back</button>
-             <button mat-button (click)="stepper.reset()">Reset</button>
-            <button mat-button (click)="onSubmit()">Submit</button>
+            <button mat-button (click)="stepper.reset()">Reset</button>
+            <button class="reg-submit-button" mat-button (click)="onSubmit()">Submit</button>
           </div>
         </mat-step>
       </mat-horizontal-stepper>
