--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,10 @@
 
 <!-- credits -->
 <div class="text-center mt-4">
-    <p>
-        <a href="https://jasonwatmore.com/post/2020/04/28/angular-9-user-registration-and-login-example-tutorial" target="_top">Rental Management System</a>
+    <p class="term-text">
+        We will process your data as set forth in our <a href="#">Terms &amp; Conditions</a>
     </p>
-    <p>
+    <p style="display:none;">
         <a href="#" target="_top">NB Development</a>
     </p>
 </div>
