--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -1,5 +1,5 @@
-﻿<div class="card">
-    <h4 class="card-header">Login</h4>
+﻿<div class="card login-reg-form">
+    <h4 class="card-header">Tenant Database Login</h4>
     <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
@@ -15,11 +15,14 @@
                 </div>
             </div>
             <div class="form-group">
-                <button [disabled]="loading" class="btn btn-primary">
+                <button [disabled]="loading" class="btn btn-primary login-btn">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
-                <a routerLink="../register" class="btn btn-link">Register</a>
+                <span class="bottom-log-links">
+                    <a routerLink="../register" class="btn btn-link">Create Account</a> |
+                    <a routerLink="../register" class="btn btn-link">Forgot Password</a>
+                </span>
             </div>
         </form>
     </div>
