--- a/src/styles.less
+++ b/src/styles.less
@@ -35,6 +35,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  display: none
+;
 }
 
 .chart-cnt canvas {
